--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1></h1>
 <hr/>
-<img style="width: 100px;" src="https://scontent.fbkk5-7.fna.fbcdn.net/v/t39.30808-6/304912860_757988062079786_5108337075623791079_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=JNKGD__XL3EAX8s6qLa&_nc_ht=scontent.fbkk5-7.fna&oh=00_AT8jJDCgpO_1K9ga4lmpq6MNKM8zlKIYNJ75l_1BXnblhQ&oe=63441F5D"
+<img style="width: 10px; height: 10px;" src="https://scontent.fbkk5-7.fna.fbcdn.net/v/t39.30808-6/304912860_757988062079786_5108337075623791079_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=JNKGD__XL3EAX8s6qLa&_nc_ht=scontent.fbkk5-7.fna&oh=00_AT8jJDCgpO_1K9ga4lmpq6MNKM8zlKIYNJ75l_1BXnblhQ&oe=63441F5D"
