--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<h1>มี่</h1>
+<h1>Runchida Netanong</h1>
 <hr/>
 <style>
     img{
-        width: 50px;
-        height: 50px;
+        width: 800px;
+        height: 800px;
         
     }
 
