--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<h1>Runchida Netanong</h1>
-<hr/>
+<center><h1>WELCOME!!</h1></center>
+<center>I'm Runchida Netanong</center>
+
 <style>
     img{
         width: 500px;
