--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <center><h1>WELCOME!!</h1></center>
-<center>I'm Runchida Netanong</center>
+<center><h1>I'm Runchida Netanong</h1></center>
 
 <style>
     img{
